# meshlink

./: .astylerc  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  COPYING.README  Doxyfile  Makefile.am  NEWS  README  README.android  README.avahi  README.catta  README.git  README.meshlink  TODO  aconfigure.sh  cmake_config.h.in  configure.ac  gitignore  meshlink.cbp  mingwmsvc_build_instructions.md
doc/: .gitignore  CONNECTIVITY  Configuration.md  Doxyfile  ENCRYPTED_STORAGE  FILES  Makefile.am  NETWORKING  PROTOCOL  SECURITY2  meshlink.texi
examples/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  channels.c  channelsaio.c  chat.c  chatpp.cc  groupchat.c  manynodes.c  meshlinkapp.c  monitor  monitor.c
src/: .gitignore  CMakeLists.txt  Makefile.am  adns.c  adns.h  autoconnect.c  buffer.c  buffer.h  cipher.h  conf.c  conf.h  connection.c  connection.h  control.c  crypto.c  crypto.h  devtools.c  devtools.h  digest.h  discovery.c  discovery.h  dropin.c  dropin.h  ecdh.h  ecdsa.h  ecdsagen.h  edge.c  edge.h  ethernet.h  event.c  event.h  fake-gai-errnos.h  fake-getaddrinfo.c  fake-getaddrinfo.h  fake-getnameinfo.h  graph.c  graph.h  hash.c  hash.h  have.h  (+74 more)
src/chacha-poly1305/: chacha-poly1305.c  chacha-poly1305.h  chacha.c  chacha.h
src/compat/: compat.h  wincompat.c  wincompat.h
src/ed25519/: add_scalar.c  ecdh.c  ecdsa.c  ecdsagen.c  ed25519.h  seed.c  sha512.c  sha512.h
src/openssl/: cipher.c  crypto.c  digest.c  digest.h  ecdh.c  ecdsa.c  ecdsagen.c  prf.c  rsa.c  rsagen.c
src/utcp/: .gitignore  README  bidirtest  selftest.c  txtest  utcp.c  utcp.h
test/: .gitignore  CMakeLists.txt  Makefile.am  api_set_node_status_cb.c  basic.c  basic.test  basicpp.cpp  basicpp.test  blacklist.c  channels-aio-abort.c  channels-aio-cornercases.c  channels-aio-fd-wouldblock.c  channels-aio-fd.c  channels-aio-fd.test  channels-aio.c  channels-aio.test  channels-buffer-storage.c  channels-cornercases.c  channels-cornercases.test  channels-failure.c  channels-failure.test  channels-fork.c  channels-fork.test  channels-framed.c  channels-mixed.c  channels-no-partial.c  channels-no-partial.test  channels-udp-cornercases.c  channels-udp-framed.c  channels-udp.c  channels-udp.test  channels.c  channels.test  destroy_containers.sh  discovery.c  duplicate.c  duplicate.test  echo-fork.c  echo-fork.c.orig  encrypted.c  (+37 more)
test/blackbox/: .gitignore  Makefile.am  gen_invite
test/blackbox/common/: common_handlers.c  common_handlers.h  common_types.h  containers.c  containers.h  mesh_event_handler.c  mesh_event_handler.h  network_namespace_framework.c  network_namespace_framework.h  tcpdump.c  tcpdump.h  test_step.c  test_step.h
test/blackbox/run_blackbox_tests/: .gitignore  Makefile.am  execute_tests.c  execute_tests.h  run_blackbox_tests  run_blackbox_tests.c  test_cases.c  test_cases.h  test_cases_add_addr.c  test_cases_add_addr.h  test_cases_add_ex_addr.c  test_cases_add_ex_addr.h  test_cases_autoconnect.c  test_cases_autoconnect.h  test_cases_blacklist.c  test_cases_blacklist.h  test_cases_channel_blacklist.c  test_cases_channel_blacklist.h  test_cases_channel_close.c  test_cases_channel_close.h  test_cases_channel_conn.c  test_cases_channel_conn.h  test_cases_channel_ex.c  test_cases_channel_ex.h  test_cases_channel_get_flags.c  test_cases_channel_get_flags.h  test_cases_channel_open.c  test_cases_channel_open.h  test_cases_channel_send.c  test_cases_channel_send.h  test_cases_channel_set_accept_cb.c  test_cases_channel_set_accept_cb.h  test_cases_channel_set_poll_cb.c  test_cases_channel_set_poll_cb.h  test_cases_channel_set_receive_cb.c  test_cases_channel_set_receive_cb.h  test_cases_channel_shutdown.c  test_cases_channel_shutdown.h  test_cases_default_blacklist.c  test_cases_default_blacklist.h  (+73 more)
test/blackbox/test_api/: cscope.out  test_api.cbp  test_api.cscope_file_list  test_api.depend  test_api.layout
test/blackbox/test_case_channel_blacklist_01/: node_sim_nut_01.c  node_sim_nut_01.h  node_sim_peer_01.c  node_sim_relay_01.c
test/blackbox/test_case_channel_conn_01/: Makefile.am  node_sim_nut.c  node_sim_peer.c
test/blackbox/test_case_channel_conn_02/: node_sim_nut.c  node_sim_peer.c
test/blackbox/test_case_channel_conn_03/: node_sim_nut.c  node_sim_peer.c
test/blackbox/test_case_channel_conn_04/: Makefile.am  node_sim_nut.c
test/blackbox/test_case_channel_conn_05/: node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_channel_conn_06/: node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_channel_conn_07/: node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_channel_conn_08/: node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_join_01/: .gitignore  Makefile.am  node_sim_peer.c
test/blackbox/test_case_join_02/: node_sim_peer.c
test/blackbox/test_case_meta_conn_01/: Makefile.am  node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_meta_conn_02/: .gitignore  Makefile.am  node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_meta_conn_03/: Makefile.am  node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_meta_conn_04/: .gitignore  Makefile.am  node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_meta_conn_05/: .gitignore  node_sim_nut.c  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_optimal_pmtu_01/: Makefile.am  node_sim_nut.c  node_sim_peer.c  node_sim_relay.c  test_case_optimal_pmtu.h
test/blackbox/test_case_optimal_pmtu_06/: Makefile.am
test/blackbox/test_case_optimal_pmtu_07/: node_sim_nut.c  node_sim_peer.c
test/blackbox/test_case_set_log_cb_02/: node_sim_relay.c
test/blackbox/test_case_set_status_cb_01/: Makefile.am  node_sim_peer.c  node_sim_relay.c
test/blackbox/test_case_set_status_cb_02/: node_sim_relay.c
test/blackbox/test_cases_submesh01/: Makefile.am  node_sim_app1node1.c  node_sim_app1node2.c  node_sim_app2node1.c  node_sim_app2node2.c  node_sim_corenode2.c
test/blackbox/test_cases_submesh02/: node_sim_app1node1.c  node_sim_app1node2.c  (+3 more)
(+44 files in other folders)
