include_directories (../src)

function(add_test_executable name)
	add_executable(${name} ${ARGN})
	target_link_libraries(${name} meshlink)
	add_test(NAME ${name} COMMAND ${name})
	set_tests_properties(${name} PROPERTIES SKIP_RETURN_CODE 77 TIMEOUT 30)
endfunction()

add_executable(stream stream.c)

add_test_executable(api_set_node_status_cb api_set_node_status_cb.c utils.c)
add_test_executable(basic basic.c utils.c)
add_test_executable(blacklist blacklist.c utils.c)
add_test_executable(channels-aio-abort channels-aio-abort.c utils.c)
add_test_executable(channels-aio-cornercases channels-aio-cornercases.c utils.c)
add_test_executable(channels-aio-fd channels-aio-fd.c utils.c)
add_test_executable(channels-aio channels-aio.c utils.c)
add_test_executable(channels-buffer-storage channels-buffer-storage.c utils.c)
add_test_executable(channels-cornercases channels-cornercases.c utils.c)
add_test_executable(channels-failure channels-failure.c utils.c)
add_test_executable(channels-fork channels-fork.c utils.c)
add_test_executable(channels-no-partial channels-no-partial.c utils.c)
add_test_executable(channels-udp-cornercases channels-udp-cornercases.c utils.c)
add_test_executable(channels-udp channels-udp.c utils.c)
add_test_executable(channels channels.c utils.c)
add_test_executable(discovery discovery.c utils.c)
add_test_executable(duplicate duplicate.c utils.c)
#add_test_executable(echo-fork echo-fork.c utils.c)
add_test_executable(encrypted encrypted.c utils.c)
add_test_executable(ephemeral ephemeral.c utils.c)
add_test_executable(get-all-nodes get-all-nodes.c utils.c)
add_test_executable(import-export import-export.c utils.c)
add_test_executable(invite-join invite-join.c utils.c)
add_test_executable(meta-connections meta-connections.c utils.c netns_utils.c)
add_test_executable(metering-relayed metering-relayed.c utils.c netns_utils.c)
add_test_executable(metering-slowping metering-slowping.c utils.c netns_utils.c)
add_test_executable(metering-tcponly metering-tcponly.c utils.c netns_utils.c)
add_test_executable(metering metering.c utils.c netns_utils.c)
add_test_executable(port port.c utils.c)
add_test_executable(sign-verify sign-verify.c utils.c)
add_test_executable(storage-policy storage-policy.c utils.c)
add_test_executable(trio trio.c utils.c)
add_test_executable(trio2 trio2.c utils.c)

# TODO: add UTCP stream tests
